Mostly fixed the iframe resize. Added the ability to save on small screens (no touch support yet)

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -378,6 +378,8 @@ select.collection-list
 		left: none
 		right: 0
 		z-index: 299
+		&:hover
+			z-index: 301
 
 	.toggle
 	.button
